<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>dad</groupId>
  <artifactId>DadgeonKnight</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  	<properties>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<javafx.version>17.0.1</javafx.version>
		<exec.mainClass>nx.game.Main</exec.mainClass>
	</properties>
	
	<repositories>
	  <repository>
	    <id>jitpack.io</id>
	    <url>https://jitpack.io</url>
	  </repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
    		<groupId>com.opencsv</groupId>
    		<artifactId>opencsv</artifactId>
    		<version>4.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6</version>
		</dependency>
		<dependency>
			<groupId>com.github.czyzby</groupId>
			<artifactId>noise4j</artifactId>
			<version>0.1.0</version>
		</dependency>
	</dependencies>
	


</project>